--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,13 @@
         "jean85/pretty-package-versions": "^1.5 || ^2.0",
         "php-http/discovery": "^1.11",
         "sentry/sdk": "^3.1",
-        "symfony/config": "^3.4.43||^4.4.11||^5.0.11",
-        "symfony/console": "^3.4.43||^4.4.11||^5.0.11",
-        "symfony/dependency-injection": "^3.4.43||^4.4.11||^5.0.11",
-        "symfony/event-dispatcher": "^3.4.43||^4.4.11||^5.0.11",
-        "symfony/http-kernel": "^3.4.43||^4.4.11||^5.0.11",
+        "symfony/config": "^3.4.43||^4.4.11||^5.0.11||^6.0",
+        "symfony/console": "^3.4.43||^4.4.11||^5.0.11||^6.0",
+        "symfony/dependency-injection": "^3.4.43||^4.4.11||^5.0.11||^6.0",
+        "symfony/event-dispatcher": "^3.4.43||^4.4.11||^5.0.11||^6.0",
+        "symfony/http-kernel": "^3.4.43||^4.4.11||^5.0.11||^6.0",
         "symfony/psr-http-message-bridge": "^2.0",
-        "symfony/security-core": "^3.4.43||^4.4.11||^5.0.11"
+        "symfony/security-core": "^3.4.43||^4.4.11||^5.0.11||^6.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.17",
@@ -41,13 +41,13 @@
         "phpstan/phpstan": "^0.12",
         "phpstan/phpstan-phpunit": "^0.12",
         "phpunit/phpunit": "^8.5||^9.0",
-        "symfony/browser-kit": "^3.4.43||^4.4.11||^5.0.11",
-        "symfony/framework-bundle": "^3.4.43||^4.4.11||^5.0.11",
-        "symfony/messenger": "^4.4.11||^5.0.11",
+        "symfony/browser-kit": "^3.4.43||^4.4.11||^5.0.11||^6.0",
+        "symfony/framework-bundle": "^3.4.43||^4.4.11||^5.0.11||^6.0",
+        "symfony/messenger": "^4.4.11||^5.0.11||^6.0",
         "symfony/monolog-bundle": "^3.4",
-        "symfony/phpunit-bridge": "^5.0",
+        "symfony/phpunit-bridge": "^5.0|^6.0",
         "symfony/polyfill-php80": "^1.22",
-        "symfony/yaml": "^3.4.43||^4.4.11||^5.0.11",
+        "symfony/yaml": "^3.4.43||^4.4.11||^5.0.11||^6.0",
         "vimeo/psalm": "^4.3"
     },
     "suggest": {
